# Kreator

./: .gitignore  README.md  SECURITY.md
.github/workflows/: cron.yml  deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _ag.txt  _main_test.txt  _yt.txt  alembic.ini  fly.toml  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  config.py  logging.py  main.py  scheduler.py  seeds.py  stress.py
backend/app/agents/: admin_agent.py  delivery.py  memory.py  research_agent.py  script_pipeline.py
backend/app/api/: dashboard.py
backend/app/crawler/: base.py  request_manager.py  runner.py  types.py  validator.py
backend/app/crawler/adapters/: __init__.py  generic_html.py  mediawiki.py  openserp.py  reddit.py  rss.py  youtube.py
backend/app/db/: base.py  enums.py  init_db.py  models.py  session.py
backend/app/export/: document.py
backend/app/integrations/: drive.py  r2.py
backend/app/llm/: client.py  prompts.py
backend/app/notifier/: bot.py  telegram.py
backend/app/pipeline/: cleaner.py  dedup.py  enricher.py  processor.py  scoring.py
backend/app/services/: cache.py  progress.py  sources.py  youtube_channels.py  youtube_ingest.py  youtube_scrape.py
backend/app/util/: hashing.py  textfix.py
backend/app/voice/: builder.py  retrieve.py  transcript.py
backend/tests/: test_config.py  test_hashing.py  test_scoring.py  test_transcript.py
frontend/public/: manifest.webmanifest  sw.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: brand-icon.tsx  (+11 more)
(+15 files in other folders)
