[project]
name = "crawler-konten"
version = "0.1.0"
description = "Mesin editorial crawler konten storytelling (horor/misteri) untuk Yoel"
requires-python = ">=3.11"
dependencies = [
    # API + server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # crawler
    "httpx>=0.27",
    "trafilatura>=1.12",
    "selectolax>=0.3.21",
    "tenacity>=9.0",
    # db
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "alembic>=1.13",
    # queue (Postgres-backed, no Redis)
    "procrastinate>=2.9",
    # in-app scheduler (window collection + digest)
    "apscheduler>=3.10",
    "tzdata>=2024.1",
    # llm
    "litellm>=1.52",
    # telegram
    "aiogram>=3.13",
    # document export
    "python-docx>=1.1",
    "fpdf2>=2.8",
    # integrations
    "boto3>=1.35",                 # Cloudflare R2 (S3-compatible)
    "google-api-python-client>=2.149",
    "google-auth>=2.35",
    # util
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "sentry-sdk>=2.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
